--- a/src/components/Footer/Footer.styled.css
+++ b/src/components/Footer/Footer.styled.css
@@ -1,80 +1,31 @@
-/* .wrapper {
-  background: #50a6fc;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: 160px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  width: 100%;
-}
-.midFooter{
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-.leftFooter {
-  margin-top: 20px;
-  margin-left: 20px;
-}
-.rightFooter {
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-} */
-
-.kop-footer {
-  font-size: 14px;
-   position: absolute;
-   bottom: 0;
-   background-color: #50a6fc;
-   padding: 1rem 0;
-}
-
-.kop-footer > .section {
-   padding: 0 1.5rem;
+.wrapper {
+   background: #50a6fc;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-auto-rows: 160px;
+   bottom: auto;
+   position:absolute;
+   width: 100%;
+   
+ 
+ }
+ .icon{
+   height: 50px;
+   width: 50px;
+ }
+ .midFooter{
+   margin-top: 20px;
+   align-items: center;
+   justify-content: center;
    text-align: center;
-}
-
-.kop-footer > .section .body {
-   margin-top: 1rem;
-}
-
-.kop-footer > .section > .title > h6 {
-  font-size: 1rem;
-   font-weight: 600;
-}
-
-.kop-footer > .section .link-icon {
-   display: inline-block;
-   margin: 0 0.5rem;
-}
-
-.kop-footer > .section .link-icon:first-child {
-   margin-left: 0;
-}
-
-.kop-footer > .section.left {
-   text-align: left;
-}
-
-.kop-footer > .section.left > .title {
-   padding-left: 5px;
-}
-
-.kop-footer .icon {
-   height: 36px;
-   width: auto;
-}
-
-.kop-footer ul.info-left {
-   list-style: none;
-   padding-left: 5px;
-}
-
-.kop-footer ul.info-left > .info-item {
-   padding-inline-start: 1.3rem;
-}
+ }
+ .leftFooter {
+   margin-top: 20px;
+   margin-left: 20px;
+ }
+ .rightFooter {
+   margin-top: 20px;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+ }
