--- a/src/components/pages/Setoran/setoran.style.scss
+++ b/src/components/pages/Setoran/setoran.style.scss
@@ -1,24 +1,43 @@
-
-
 .form-setoran {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 2rem;
+   width: 80%;
+   margin: 0 auto;
+   margin-top: 2rem;
 
-    .form-group {
-        margin-bottom: 2em;
-        width: 100%;
-    }
+   .form-group {
+      margin-bottom: 2em;
+      width: 100%;
+   }
+}
+
+.table-filter {
+   margin: 1em 0;
+   > * {
+      margin: 0 1em;
+   }
+
+   > button {
+      float: right;
+      background-color: var(--primary);
+      margin-left: 1rem;
+      color: white;
+      > span {
+         font-weight: 500;
+      }
+
+      &:hover {
+          color: black;
+      }
+   }
 }
 
 .table-setoran {
-    tfoot > tr > .table-filter {
-        border-bottom: none;
-    }
+   tfoot > tr > td {
+      border-bottom: none;
+   }
 
-    .table-filter {
-        > .MuiInputBase-root {
-            margin-left: 10px;
-        }
-    }
+   .table-filter {
+      > .MuiInputBase-root {
+         margin-left: 10px;
+      }
+   }
 }
