--- a/src/components/Tabs/Tabs.styled.css
+++ b/src/components/Tabs/Tabs.styled.css
@@ -15,8 +15,8 @@ body {
    /* flex-direction: column; */
    position: relative;
    width: 100%;
-   /* height: 300px; */
-   background: #f1f1f1;
+   min-height: 383px;
+   /* background: #f1f1f1; */
    margin: 25px auto 0;
    word-break: break-all;
    border: 1px solid rgba(0, 0, 0, 0.274);
